--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <link href="css/section.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/table.css" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400&family=Red+Hat+Mono:ital,wght@0,400;0,500;1,400&display=swap"
         rel="stylesheet">
     <script defer src="js/script.js"></script>
 </head>
@@ -31,7 +30,8 @@
         <header>
             <h1 class="header"> Hania Nassalska - moja przykładowa strona
             </h1>
-            <p><button class="header__button js-header__button"><span class="themName">Zmień</span> kolor tła</button></p>
+            <p><button class="header__button js-header__button"><span class="themName">Zmień</span> kolor tła</button>
+            </p>
 
             <nav>
                 <ul>
@@ -41,9 +41,7 @@
             </nav>
         </header>
         <main>
-            <img class="image"
-                src="https://images.unsplash.com/photo-1642983988364-52c76af6f950?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0NTczNzYwOQ&ixlib=rb-1.2.1&q=80&w=400"
-                alt="Zdjęcie morza o zachodzie słońca">
+            <img class="image" src="image/grafika.png" alt="Zółta grafika z czarnym napisem - Tu będzie moje zdjęcie">
             <section>
                 <h2 id="krotko-o-mnie" class="section__header">Krótko o mnie</h2>
 
@@ -56,10 +54,10 @@
                     które
                     moja organizacja kierowała do osób z niepełnosprawnościami, celem nabywania przez nich umiejętności
                     cyfrowych.
-                    Pracowałam również przy ogólnopolskich projektach mających na celu podnoszenie wiedzy i umiejętności
+                   <p>Pracowałam również przy ogólnopolskich projektach mających na celu podnoszenie wiedzy i umiejętności
                     cyfrowych
                     urzędników z zakresu dostępności zasobów cyfrowych, przede wszystkim dostępności stron
-                    internetowych.
+                    internetowych.</p> 
 
                 </p>
                 <p>Ponadto <b>zajmowałam się pisaniem wniosków o dofinansowanie projektów ze środków UE i innych
@@ -69,11 +67,11 @@
                         lang="en">non-government
                         organization</i>).
 
-                    <br>Przez ostatnie lata <b>zajmowałam się organizacją i zarządzaniem projektami kierowanymi do
-                        klientów
-                        biznesowych, głównie korporacyjnych</b>.
+                   <p>Przez ostatnie lata <b>zajmowałam się organizacją i zarządzaniem projektami kierowanymi do
+                    klientów
+                    biznesowych, głównie korporacyjnych</b>.</p>
 
-                    <br>Prywatnie spełniam się jako mama, a w <em>wolnym czasie</em> poszerzam swoje umiejętności ;)
+                    <p>Prywatnie spełniam się jako mama, a w <em>wolnym czasie</em> poszerzam swoje umiejętności ;)
                     i
                     zdarza mi się
                     grać w
@@ -133,12 +131,12 @@
                         </tr>
                     </table>
                 </div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro quaerat illo, in, dolores animi
-                        voluptas amet corrupti possimus omnis eaque quo modi? Voluptatem doloremque blanditiis, est iste
-                        architecto quisquam eius? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla,
-                        maxime suscipit cumque eveniet reiciendis quod distinctio sunt fugit officia labore. Ipsam at
-                        illum veniam fugiat iusto et, dolorum incidunt qui!</p>
-               
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro quaerat illo, in, dolores animi
+                    voluptas amet corrupti possimus omnis eaque quo modi? Voluptatem doloremque blanditiis, est iste
+                    architecto quisquam eius? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla,
+                    maxime suscipit cumque eveniet reiciendis quod distinctio sunt fugit officia labore. Ipsam at
+                    illum veniam fugiat iusto et, dolorum incidunt qui!</p>
+
             </section>
 
         </main>
