changed CSS name: 'section__subHeader'

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     tenisa.
                 </p>
 
-                <h3 class="section_subHeader">Dlaczego tu jestem?
+                <h3 class="section__subHeader">Dlaczego tu jestem?
                 </h3>
 
                 <p>Przez lata związana byłam z branżą IT od strony zarządzania projektami, zawsze
