--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Hania Nassalska - moja strona</title>
+    <meta property="og:image" content="images/shere.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -41,7 +42,7 @@
             </nav>
         </header>
         <main>
-            <img class="image" src="image/grafika.png" alt="Zółta grafika z czarnym napisem - Tu będzie moje zdjęcie">
+            <img class="image" src="images/grafika.png" alt="Zółta grafika z czarnym napisem - Tu będzie moje zdjęcie">
             <section>
                 <h2 id="krotko-o-mnie" class="section__header">Krótko o mnie</h2>
 
