added background image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script defer src="js/script.js"></script>
 </head>
 
-<body class="body">
+<body class="body body__backgroundImage">
     <div class="container">
         <header>
             <h1 class="header"> Hania Nassalska - moja przykładowa strona
