--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="body body__backgroundImage">
-    <div class="container">
+    <div class="container container__backgroundImage">
         <header>
             <h1 class="header"> Hania Nassalska - moja przykładowa strona
             </h1>
