Table classes changed; Space in JS deleted.

--- a/index.html
+++ b/index.html
@@ -98,34 +98,34 @@
                     <table class="table">
                         <caption class="table__caption"><b>Kto co posprzątał?</b></caption>
                         <tr class="table__row">
-                            <th class="table__cell table__header" scope="col">Kto?</th>
-                            <th class="table__cell table__header" scope="col">Odkurzanie</th>
-                            <th class="table__cell table__header" scope="col">Łazienka</th>
-                            <th class="table__cell table__header" scope="col">Kuchnia</th>
-                            <th class="table__cell table__header" scope="col">Śmieci</th>
+                            <th class="table__cell table__cell--header" scope="col">Kto?</th>
+                            <th class="table__cell table__cell--header" scope="col">Odkurzanie</th>
+                            <th class="table__cell table__cell--header" scope="col">Łazienka</th>
+                            <th class="table__cell table__cell--header" scope="col">Kuchnia</th>
+                            <th class="table__cell table__cell--header" scope="col">Śmieci</th>
                         </tr>
                         <tr class="table__row">
-                            <th class="table__cell table__header" scope="row">Anna</th>
+                            <th class="table__cell table__cell--header" scope="row">Anna</th>
                             <td class="table__cell">&#10004;</td>
                             <td class="table__cell"></td>
                             <td class="table__cell"></td>
                             <td class="table__cell"></td>
                         </tr>
                         <tr class="table__row">
-                            <th class="table__cell table__header" scope="row">Piotr</th>
+                            <th class="table__cell table__cell--header" scope="row">Piotr</th>
                             <td class="table__cell"></td>
                             <td class="table__cell"></td>
                             <td class="table__cell" colspan="2">&#10004;</td>
                         </tr>
                         <tr class="table__row">
-                            <th class="table__cell table__header" scope="row">Maria</th>
+                            <th class="table__cell table__cell--header" scope="row">Maria</th>
                             <td class="table__cell"></td>
                             <td class="table__cell"></td>
                             <td class="table__cell"></td>
                             <td class="table__cell">&#10004;</td>
                         </tr>
                         <tr class="table__row">
-                            <th class="table__cell table__header" scope="row">Michał</th>
+                            <th class="table__cell table__cell--header" scope="row">Michał</th>
                             <td class="table__cell"></td>
                             <td class="table__cell">&#10004;</td>
                             <td class="table__cell"></td>
